# CalSol

./: .gitignore  BACKEND_DEPLOYMENT.md  GOOGLE_CALENDAR_INTEGRATION.md  QUICK_START.md  README.md  VERCEL_DEPLOYMENT.md  build-frontend.sh  deploy-static.sh  deploy.sh  package-lock.json  package.json  vercel.json
backend/: .env.example  package-lock.json  package.json  server.js
backend/services/: calendarService.js
frontend/: 00_READ_ME_FIRST.md  FULL_SETUP_GUIDE.md  GOOGLE_CALENDAR_SETUP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  README.md  README_REAL_INTEGRATION.md  READY_TO_USE.md  SERVICE_ACCOUNT_INTEGRATED.md  SETUP.md  START_HERE.md  STEP_BY_STEP_TESTING.md  TEST_WEB3.md  WEB3_INTEGRATION.md  WHAT_WAS_DONE.md  babel.config.js  index.html  package-lock.json  package.json  render.yaml  server.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Calendar.tsx  Features.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Roadmap.tsx
frontend/src/pages/: Calendar.tsx  Dashboard.tsx  Index.tsx  NotFound.tsx
frontend/src/services/: solanaService.ts
programs/: Anchor.toml  scheduled_payment.rs
programs/calendarfi/: Cargo.toml
programs/calendarfi/src/: errors.rs  lib.rs
programs/calendarfi/src/instructions/: clockwork_integration.rs  create_scheduled_payment.rs  create_token_gated_event.rs  execute_scheduled_payment.rs  mod.rs  update_event_status.rs  verify_token_ownership.rs
programs/calendarfi/src/state/: calendar_event.rs  mod.rs  token_gate_config.rs
tests/: calendarfi.ts
(+3 files in other folders)
